@@ -281,7 +281,7 @@ sub authorEdit {
 	}
 
 	for ($quote, $copy) {
-		$_ = stripByMode($_, 'literal');
+		$_ = stripByMode($_, 'literal', 1);
 	}
 
 	print <<EOT;
@@ -483,8 +483,8 @@ EOT
 	my($block, $bseclev, $type, $description) =
 		sqlSelect('block,seclev,type,description', 'blocks', "bid='$bid'") if $bid;
 
-	my $description_ta = stripByMode($description, 'literal');
-	$block = stripByMode($block, 'literal');
+	my $description_ta = stripByMode($description, 'literal', 1);
+	$block = stripByMode($block, 'literal', 1);
 
 	# main table
 	print <<EOT;
@@ -1221,8 +1221,8 @@ EOT
 	my @extracolumns = sqlSelectColumns($S->{section})
 		if sqlTableExists($S->{section});
 
-	my $introtext = stripByMode($S->{introtext}, 'literal');
-	my $bodytext  = stripByMode($S->{bodytext}, 'literal');
+	my $introtext = stripByMode($S->{introtext}, 'literal', 1);
+	my $bodytext  = stripByMode($S->{bodytext}, 'literal', 1);
 	my $SECT = getSection($S->{section});
 
 	print '<TABLE BORDER="0" CELLPADDING="2" CELLSPACING="0">';
@@ -1495,7 +1495,7 @@ EOT
 			"content_filters","filter_id=$filter_id");
 
 	# this has to be here - it really screws up the block editor
-	$err_message = stripByMode($err_message, 'literal');
+	$err_message = stripByMode($err_message, 'literal', 1);
 	my $textarea = <<EOT;
 <TEXTAREA NAME="err_message" COLS="50" ROWS="2">$err_message</TEXTAREA>
 EOT
